<resources>
    <string name="app_name">Registration</string>

    <string name="loginLogo">Login</string>
    <string name="btnLogin">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="createNewAccount">Create New Account ? </string>
    <string name="sign_up">Sign Up New Account</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="RegisterLogo">Register</string>
    <string name="btnRegister">Register</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="already_have_an_account">Already Have An Account ? </string>
    <string name="Login"> Login</string>
    <string name="d1">d1</string>
    <string name="d2">d2</string>
    <string name="d3">d3</string>
    <string name="d4">d4</string>
    <string name="forgotPassword">Forgot Your Password?</string>
    <string name="ForgotPassInfo">Please enter your registered email address to reset your password</string>
    <string name="back">Back to Login Page</string>
    <string name="resetPassword">RESET PASSWORD</string>
    <string name="hi_welcome">HI, WELCOME</string>
    <string name="view_motion_status">View Motion Status</string>
    <string name="view_your_motion_status">View your motion      status</string>
    <string name="view_motion_history">View Motion History</string>
    <string name="view_your_motion_history">View your motion history</string>
    <string name="view_capture_history">View Capture History</string>
    <string name="view_your_capture_history">View your capture history</string>
    <string name="account_and_privacy">View Live Cam</string>
    <string name="view_edit_account_and_privacy">Monitor your house "   " with live camera</string>
    <string name="view_users_motion_status">View users motion status</string>
    <string name="view_users_motion_history">View users motion history</string>
    <string name="view_users_capture_history">View users capture history</string>
    <string name="view_list_of_users">View list of users</string>
    <string name="logout_btn">Logout</string>
    <string name="tv_change_password">CHANGE PASSWORD</string>
    <string name="logout_item">Logout</string>
    <string name="change_password_item">Change Password</string>
    <string name="account_setting_item">Account Setting</string>
    <string name="changePassword">Change Password </string>
    <string name="changePasswordInfo">Please enter your new password</string>
    <string name="backHome">Back to Home Page</string>
    <string name="btnChangePassword">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btnAuthenticate">Authenticate</string>
    <string name="current_email">Current Email</string>
    <string name="profileLogo">Profile</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnSave">Save</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="backLogin">Back to User Login Page</string>
    <string name="btnAdminLogin">Login</string>
    <string name="d1_admin">d1 admin</string>
    <string name="d2_admin">d2 admin</string>
    <string name="d3_admin">d3 admin</string>
    <string name="d4_admin">d4 admin</string>
    <string name="editProfile">Edit</string>
    <string name="e_mail">Email</string>
    <string name="user_name">Username:</string>
    <string name="search_data">Search Data</string>
    <string name="demo_name">This is Demo Name</string>
    <string name="this_is_email_name">This is Email Name</string>
    <string name="todo">TODO</string>
    <string name="backTV"> Back</string>

</resources>
