<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cc"
    tools:context=".AdminEditProfileActivity">

    <TextView
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileLogo"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="357dp"
        android:layout_height="204dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/profile_picture"
        app:civ_border_color="@color/colorWhite"
        app:civ_border_width="6dp"
        app:layout_constraintEnd_toEndOf="@+id/Profile"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/Profile"
        app:layout_constraintTop_toBottomOf="@+id/Profile" />

    <TextView
        android:id="@+id/editProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/editProfile"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/etUsernameUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/username"
        android:paddingBottom="15dp"
        android:paddingEnd="20dp"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/etEmailUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawablePadding="10dp"
        android:ems="10"
        android:paddingBottom="15dp"
        android:paddingEnd="20dp"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:text="@string/email"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:drawableStartCompat="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="@+id/etUsernameUpdate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etUsernameUpdate"
        app:layout_constraintTop_toBottomOf="@+id/etUsernameUpdate"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg"
        android:text="@string/btnSave"
        app:layout_constraintEnd_toEndOf="@+id/etEmailUpdate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmailUpdate"
        app:layout_constraintTop_toBottomOf="@+id/etEmailUpdate"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/userBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/backTV"
        android:textAlignment="center"
        android:textColor="#B3E5FC"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnSave"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

</androidx.constraintlayout.widget.ConstraintLayout>